# tinyrender_rs

./: Cargo.toml  README.md
src/: define.rs  lib.rs  main.rs  matrix.rs  mobj.rs
