[package]
name = "tr_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
wasm-bindgen = "0.2.83"
once_cell = "1.16.0"
serde = {version="1.0.147", features=["derive"] }
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    "CanvasRenderingContext2d",
    "ImageData",
    "console",
    "HtmlCanvasElement"
]